examples/errors/02_omitted_variable/omitted_variable.txy
proc main()
    var x: int = 0;
    var y: int = x + y;
endproc;